--- a/latex/final-paper.tex
+++ b/latex/final-paper.tex
@@ -9,40 +9,15 @@
 
 
 \section{Introduction}
-
-Talk about
-learning in large state spaces and tetris
-Purpose:
-Investigate the application of Q-learning to tetris
-Goals: comparing the effectiveness of exact/approximate Q-learning with different heuristics, different boards, parameters
-scope: random agent, exact agent, approximate agent, different heuristics and ability to train on different board sizes
-references: tetris clone we got from online
-algorithms: devised our own representation of states and actions and applied algorithms we learned in class
-
-A description of the purpose, goals, and scope of your system or
-empirical investigation.  You should include references to papers you
-read on which your project and any algorithms you used are
-based. Include a discussion of whether you adapted a published
-algorithm or devised a new one, the range of problems and issues you
-addressed, and the relation of these problems and issues to the
-techniques and ideas covered in the course.
-
 The initial goal in undertaking this project was to investigate the possible application of Q-learning for the game of Tetris. For an explanation of the rules of Tetris, read appendix (insert appendix). More specifically, we wanted to apply Q-learning techniques to create an agent which could learn how to optimally play the game i.e. optimally 'clear lines' and survive for as long as possible. Our goal was to compare the effectiveness of exact Q-learning techniques (model-free learning) against approximate Q-learning techniques (model-based learning) for different specifications of the game, that is, for different sizes of the game board. We hypothesised that in general an approximate Q-learning learning agent would perform better than an exact Q-learning agent predicated on the reasoning that our defined state-space would be very large, and thus our exact Q-learning agent wouldn't sufficiently explore the state-space to conduct its learning. To elucidate this comparison, we also had the goal of comparing the effectiveness of the two different agents for different boards (i.e. differently sized state-spaces), different learning parameters (i.e. different learning rates $\alpha$ and different random-action selection rates for epsilon greedy approach $\epsilon$), and different heuristics/features for the approximate Q-learning agent. After conducting analysis on these manifold aspects, we have the goal of drawing conclusions regarding what an optimal Q-learning agent for this game might look like.
 
 The Q-learning algorithms we applied, detailed in the Approach section, were fundamentally the same algorithms we learnt in class. However, we created our own representation for states and actions for the tetris game. Furthermore, we defined our own features for approximate Q-learning, and implemented our own method for testing both agents. Our baseline agent we tested against was the random-action agent, which picks any legal action with equal probability. We utilised an existing pygame version of tetris, with a pre-defined implementation of the tetris board, pieces, and user-interaction (key-board presses) functionality; we built upon this framework to implement our Q-learning agents by defining our own representation for states, legal actions, rewards, storage of Q-values and so forth.
 
-\subsection{Citations}
-
-
-\bigskip
-
-To apply these Q-learning approaches to tetris, we used an existing pygame representation of the tetris game; thus, we had access to code which defined the board, pieces, keyboard-moves, and all visual representation. We then created our own representations for states and actions (the definitions of which can be found in the section titled 'problem specification') for which our agents would learn with. We then applied the feature based and exact Q-learning algorithms we learnt during this course. We utilised a similar structure to that in the Reinforcement Learning problem set to define the 'RLAgent' class.
-
 \section{Scope}
 
 \subsection{Background and Related Work}
+To apply these Q-learning approaches to tetris, we used an existing pygame representation of the tetris game; thus, we had access to code which defined the board, pieces, keyboard-moves, and all visual representation. We then created our own representations for states and actions (the definitions of which can be found in the section titled 'problem specification') for which our agents would learn with. We then applied the feature based and exact Q-learning algorithms we learnt during this course. We utilised a similar structure to that in the Reinforcement Learning problem set to define the 'RLAgent' class.
 
-Tetris clone
 look at papers we used for the project proposal.
 
 For instance, \cite{hochreiter1997long}.
@@ -109,11 +84,11 @@ your paper.
 The implementation of the game itself is adapted from "Tetronimo" (a Tetris clone) by Al Sweigart. Many of the functions used to draw objects on the screen and manipulate the game board (such as clearing lines and dropping pieces) were written by him. We adapted the game to be Object-Oriented: each piece object is generated by an object called the "piece generator". The board object then has functions to manipulate the board itself. The game board itself is stored as a column-wise list of lists. For our Exact Learning agent, we store states as tuples of the board's top line, the shape of the falling piece, and the shape of the next piece. For our Approximate Learning agent, we store states as tuples of the current board, the shape of the falling piece, and the shape of the next piece. For both agents, actions are stored as tuples of (rotation, column) pairs.
 
 \subsection{Algorithms}
-The main algorithms that we used were the Exact Q Learning and Approximate Q Learning algorithms. As defined in the lecture notes, the Exact Q Learning algorithm stores a lookup table of (state, action) pairs with their associated Q-values. To update Q-values, we use the following algorithm where $s$ and $a$ are the previous state and action, $s'$ is the new state, $r$ is the observed reward, $\delta$ is the discount factor, and $\alpha$ is the learning rate:
+The main algorithms that we used were the Exact Q Learning and Approximate Q Learning algorithms. As defined in the lecture notes, the Exact Q Learning algorithm stores a lookup table of (state, action) pairs with their associated Q-values. To update Q-values, we use the following algorithm where $s$ and $a$ are the previous state and action, $s'$ is the new state, $r$ is the observed reward, $\gamma$ is the discount factor, and $\alpha$ is the learning rate:
 \begin{algorithm}
   \begin{algorithmic}
     \Procedure{updateQValues}{$s, a, s', r$}
-        \State{$sample \gets r + \delta\max_{a'}Q(s', a')$}
+        \State{$sample \gets r + \gamma\max_{a'}Q(s', a')$}
         \State{$Q(s,a) \gets Q(s,a)(1 - \alpha) + \alpha\cdot sample $}
     \EndProcedure{}
   \end{algorithmic}
@@ -121,11 +96,11 @@ The main algorithms that we used were the Exact Q Learning and Approximate Q Lea
 \end{algorithm}\\
 As defined in the lecture notes, the approximate Q Learning algorithm stores a table of weights associated with pre-defined features. These features are obtained by evaluating certain heuristics on a (state, action) pair. The Q-value of a state thus becomes the dot product of the feature and weight vectors:
 $$Q(s,a) = w_1f_1(s,a) + w_2f_2(s,a) + \ldots + w_nf_n(s,a)$$
-To update values for the weights, we use the following algorithm where where $s$ and $a$ are the previous state and action, $s'$ is the new state, $r$ is the observed reward, $\delta$ is the discount factor, and $\alpha$ is the learning rate:
+To update values for the weights, we use the following algorithm where where $s$ and $a$ are the previous state and action, $s'$ is the new state, $r$ is the observed reward, $\gamma$ is the discount factor, and $\alpha$ is the learning rate:
 \begin{algorithm}
   \begin{algorithmic}
     \Procedure{updateWeights}{$s, a, s', r$}
-        \State{$difference \gets \alpha(r + \delta\max_{a'}Q(s', a') - Q(s,a))$}
+        \State{$difference \gets \alpha(r + \gamma\max_{a'}Q(s', a') - Q(s,a))$}
         \For{i = 1:n}
             \State{$w_i \gets w_i + f_i(s,a)\cdot difference $}
         \EndFor{}
@@ -143,8 +118,10 @@ We defined and tested several heuristics for approximate learning. In our featur
 \begin{enumerate}
     \item \textbf{Highest Point:}
     This refers to the highest point on the current 'stack' on the board, where the stack refers to the amalgamation of pieces below the empty space at the top of the board. We anticipated that our approximate agent would learn negative weights for this feature, because a larger 'highest point' would, by proxy, imply a higher 'piece stack', which would mean our agent is closer to breaching the top of the board and dying. (we should get some images to display these)
+    \item \textbf{Aggregate Height:}
     \item \textbf{Holes:}
     The number of 'Holes' refers to the number of blank-spaces below the top line of our 'piece stack'. They define the empty spaces that are currently inaccessible to our agent, i.e. there exists a filled space at some height above the height of the 'hole'. We anticipated that our approximate Q-learning agent would learn negative weights for this feature, because a greater number of holes implies our 'piece-stack' is not optimally compressed; this means that it is 1) more likey that our 'piece-stack' is taller, and 2) future line-clears could be more difficult for our agent. In both cases, it would seem our agent should seek to minimize this feature.
+    \item \textbf{Squared Hole Size:}
     \item \textbf{Lines Cleared:}
     This feature refers to the number of complete Lines that would be cleared after taking the specified action $\alpha$, where a 'complete line' refers to a row on the tetris board in which every space is filled by a piece.
     \item \textbf{Height Difference:}
@@ -227,19 +204,19 @@ To run our code, first a user must \texttt{cd} into the \texttt{src} directory. 
     \item \texttt{-n, --no-play}: By default, the agent will begin playing the game after training and testing is over. This flag will tell the system to NOT show the agent playing the game.
     \item \texttt{-b BOARD\_DIM, --board=BOARD\_DIM}: Set the board dimensions. These should be given as \texttt{WIDTHxHEIGHT}. The board dimensions are set by default to be 10x20.
 \end{enumerate}
-Some example
+Some example commands are below:
+\begin{enumerate}
+    \item \texttt{python tetroid.py -a ApproximateQAgent -l 300TrainFeatures}\\ Running this command will load in the file \texttt{300TrainFeatures.pickle} from the \texttt{values} directory and show our Approximate Q Learning Agent playing the game using these weights on a 10x20 board.
+    \item \begin{verbatim} python tetroid.py
+    -a ExactQAgent
+    -g numTraining=1,numTesting=5,gamesPerEpisode=10000,alpha=0.05
+    -p 1000 --train --test -n -b 5x8 -x foo
+    \end{verbatim}
+    One of our most frequently used commands when training our Exact Learning agents. This will begin training an Exact Q Learning agent on a 5x8 board from scratch. It will train over 50000 games and test over 10000 games using learning parameters of $\alpha=0.05$, $\epsilon=0.5$, and $\gamma=1$ (note how we only set option for the agent which differ from their default values), showing progress after every 1000 games. After training, it will export the values it learned to a file called \texttt{foo.pickle}, which will be stored in the \texttt{values} directory. After testing, it will display average rewards over every set of 10000 games (through training and testing). Finally, the program will exit without showing the agent playing.
+\end{enumerate}
 
 \section{Group Makeup}
-
-Nikhil Suri
-Soumil Singh
-Division of work was even
-
-Appendix 2 – A list of each project participant and that
-participant’s contributions to the project. If the division of work
-varies significantly from the project proposal, provide a brief
-explanation.  Your code should be clearly documented.
-
+This project was completed by Nikhil Suri and Soumil Singh. Both were responsible for and contributed to implementation, experimentation, analysis, and documentation of the entire system.
 
 \bibliographystyle{plain}
 \bibliography{final-project}
